--- a/Semana5-clase4/index.html
+++ b/Semana5-clase4/index.html
@@ -9,174 +9,176 @@
     <title>Github Jobs</title>
 </head>
 <body>
-    <header>
-        <div class="header"> 
-            <h2>Github<span>Jobs</span></h2>
-        </div>
-    </header>
-    <main>
-        <div class="container">
-            <div class="search-container">
-                <i class="fas fa-briefcase"></i>
-                <input class="input input__small" type="search" placeholder="Title, companies, exp...">
-                <input class="input input__medium" type="search" placeholder="Title, companies, experti...">
-                <input class="input input__large" type="search" placeholder="Title, companies, expertise or benefits">
-                <button class="btn">Search</button>
+    <div class="body-cont">
+        <header>
+            <div class="header"> 
+                <h2>Github<span>Jobs</span></h2>
             </div>
-        </div>
-        <div class="container-filter-jobs">
-            <div class="filter">
-                <div class="checkbox">
-                    <input type="checkbox" name="_checkbox" id="_checkbox">
-                    <label for="_checkbox"> Full time</label>
-                </div>
-                <h3>LOCATION</h3>
+        </header>
+        <main>
+            <div class="container">
                 <div class="search-container">
-                    <i class="fas fa-globe-americas"></i>
-                    <input class="input" type="text" placeholder="City, state, zip code or country">
-                </div>
-                <div class="radio-options">
-                    <input type="radio" name="country" id="london">
-                    <label for="london">London</label><br>
-                    <input type="radio" name="country" id="amsterdam">
-                    <label for="amsterdam">Amsterdam</label><br>
-                    <input type="radio" name="country" id="new_york">
-                    <label for="new_york">New York</label><br>
-                    <input type="radio" name="country" id="berlin">
-                    <label for="berlin">Berlin</label><br>
+                    <i class="fas fa-briefcase"></i>
+                    <input class="input input__small" type="search" placeholder="Title, companies, exp...">
+                    <input class="input input__medium" type="search" placeholder="Title, companies, experti...">
+                    <input class="input input__large" type="search" placeholder="Title, companies, expertise or benefits">
+                    <button class="btn">Search</button>
                 </div>
             </div>
-            <div class="jobs">
-                <div class="job-offer-container">
-                    <div class="cards-container">
-                        <a href="./job-info.html">
-                            <div class="card">
-                                <div class="card-img-info">
-                                    <div class="card-img">
-                                        <img src="https://picsum.photos/90/90" alt="">
-                                    </div>
-                                    <div class="card-info">
-                                        <h3>Kasisto</h3>
-                                        <h2>Front-End Software Engineer</h2>
-                                        <button class="btn-time">Full time</button>
-                                    </div>
-                                </div>                       
-                                <div class="card-location-time">
-                                    <div class="location">
-                                        <i class="fas fa-globe-americas"><span> New York</span></i>
-                                        <i class="far fa-clock"><span> 5 days ago</span></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>                       
+            <div class="container-filter-jobs">
+                <div class="filter">
+                    <div class="checkbox">
+                        <input type="checkbox" name="_checkbox" id="_checkbox">
+                        <label for="_checkbox"> Full time</label>
                     </div>
-                    <div class="cards-container">
-                        <a href="./job-info.html">
-                            <div class="card">
-                                <div class="card-img-info">
-                                    <div class="card-img">
-                                        <img src="https://picsum.photos/90/90" alt="">
-                                    </div>
-                                    <div class="card-info">
-                                        <h3>Kasisto</h3>
-                                        <h2>Front-End Software Engineer</h2>
-                                        <button class="btn-time">Full time</button>
-                                    </div>
-                                </div>                       
-                                <div class="card-location-time">
-                                    <div class="location">
-                                        <i class="fas fa-globe-americas"><span> New York</span></i>
-                                        <i class="far fa-clock"><span> 5 days ago</span></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
+                    <h3>LOCATION</h3>
+                    <div class="search-container">
+                        <i class="fas fa-globe-americas"></i>
+                        <input class="input" type="text" placeholder="City, state, zip code or country">
                     </div>
-                    <div class="cards-container">
-                        <a href="./job-info.html">
-                            <div class="card">
-                                <div class="card-img-info">
-                                    <div class="card-img">
-                                        <img src="https://picsum.photos/90/90" alt="">
-                                    </div>
-                                    <div class="card-info">
-                                        <h3>Kasisto</h3>
-                                        <h2>Front-End Software Engineer</h2>
-                                        <button class="btn-time">Full time</button>
-                                    </div>
-                                </div>                       
-                                <div class="card-location-time">
-                                    <div class="location">
-                                        <i class="fas fa-globe-americas"><span> New York</span></i>
-                                        <i class="far fa-clock"><span> 5 days ago</span></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
+                    <div class="radio-options">
+                        <input type="radio" name="country" id="london">
+                        <label for="london">London</label><br>
+                        <input type="radio" name="country" id="amsterdam">
+                        <label for="amsterdam">Amsterdam</label><br>
+                        <input type="radio" name="country" id="new_york">
+                        <label for="new_york">New York</label><br>
+                        <input type="radio" name="country" id="berlin">
+                        <label for="berlin">Berlin</label><br>
                     </div>
-                    <div class="cards-container">
-                        <a href="./job-info.html">
-                            <div class="card">
-                                <div class="card-img-info">
-                                    <div class="card-img">
-                                        <img src="https://picsum.photos/90/90" alt="">
-                                    </div>
-                                    <div class="card-info">
-                                        <h3>Kasisto</h3>
-                                        <h2>Front-End Software Engineer</h2>
-                                        <button class="btn-time">Full time</button>
-                                    </div>
-                                </div>                       
-                                <div class="card-location-time">
-                                    <div class="location">
-                                        <i class="fas fa-globe-americas"><span> New York</span></i>
-                                        <i class="far fa-clock"><span> 5 days ago</span></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="cards-container">
-                        <a href="./job-info.html">
-                            <div class="card">
-                                <div class="card-img-info">
-                                    <div class="card-img">
-                                        <img src="https://picsum.photos/90/90" alt="">
-                                    </div>
-                                    <div class="card-info">
-                                        <h3>Kasisto</h3>
-                                        <h2>Front-End Software Engineer</h2>
-                                        <button class="btn-time">Full time</button>
-                                    </div>
-                                </div>                       
-                                <div class="card-location-time">
-                                    <div class="location">
-                                        <i class="fas fa-globe-americas"><span> New York</span></i>
-                                        <i class="far fa-clock"><span> 5 days ago</span></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>  
                 </div>
-                
-                <div class="btn-pages">
-                    <button class="btn-numb"><</button>
-                    <button class="btn-numb">1</button>
-                    <button class="btn-numb">2</button>
-                    <button class="btn-numb">3</button>
-                    <button class="btn-numb">4</button>
-                    <button class="btn-numb">...</button>
-                    <button class="btn-numb">10</button>
-                    <button class="btn-numb">></button>
+                <div class="jobs">
+                    <div class="job-offer-container">
+                        <div class="cards-container">
+                            <a href="./job-info.html">
+                                <div class="card">
+                                    <div class="card-img-info">
+                                        <div class="card-img">
+                                            <img src="https://picsum.photos/90/90" alt="">
+                                        </div>
+                                        <div class="card-info">
+                                            <h3>Kasisto</h3>
+                                            <h2>Front-End Software Engineer</h2>
+                                            <button class="btn-time">Full time</button>
+                                        </div>
+                                    </div>                       
+                                    <div class="card-location-time">
+                                        <div class="location">
+                                            <i class="fas fa-globe-americas"><span> New York</span></i>
+                                            <i class="far fa-clock"><span> 5 days ago</span></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>                       
+                        </div>
+                        <div class="cards-container">
+                            <a href="./job-info.html">
+                                <div class="card">
+                                    <div class="card-img-info">
+                                        <div class="card-img">
+                                            <img src="https://picsum.photos/90/90" alt="">
+                                        </div>
+                                        <div class="card-info">
+                                            <h3>Kasisto</h3>
+                                            <h2>Front-End Software Engineer</h2>
+                                            <button class="btn-time">Full time</button>
+                                        </div>
+                                    </div>                       
+                                    <div class="card-location-time">
+                                        <div class="location">
+                                            <i class="fas fa-globe-americas"><span> New York</span></i>
+                                            <i class="far fa-clock"><span> 5 days ago</span></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="cards-container">
+                            <a href="./job-info.html">
+                                <div class="card">
+                                    <div class="card-img-info">
+                                        <div class="card-img">
+                                            <img src="https://picsum.photos/90/90" alt="">
+                                        </div>
+                                        <div class="card-info">
+                                            <h3>Kasisto</h3>
+                                            <h2>Front-End Software Engineer</h2>
+                                            <button class="btn-time">Full time</button>
+                                        </div>
+                                    </div>                       
+                                    <div class="card-location-time">
+                                        <div class="location">
+                                            <i class="fas fa-globe-americas"><span> New York</span></i>
+                                            <i class="far fa-clock"><span> 5 days ago</span></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="cards-container">
+                            <a href="./job-info.html">
+                                <div class="card">
+                                    <div class="card-img-info">
+                                        <div class="card-img">
+                                            <img src="https://picsum.photos/90/90" alt="">
+                                        </div>
+                                        <div class="card-info">
+                                            <h3>Kasisto</h3>
+                                            <h2>Front-End Software Engineer</h2>
+                                            <button class="btn-time">Full time</button>
+                                        </div>
+                                    </div>                       
+                                    <div class="card-location-time">
+                                        <div class="location">
+                                            <i class="fas fa-globe-americas"><span> New York</span></i>
+                                            <i class="far fa-clock"><span> 5 days ago</span></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="cards-container">
+                            <a href="./job-info.html">
+                                <div class="card">
+                                    <div class="card-img-info">
+                                        <div class="card-img">
+                                            <img src="https://picsum.photos/90/90" alt="">
+                                        </div>
+                                        <div class="card-info">
+                                            <h3>Kasisto</h3>
+                                            <h2>Front-End Software Engineer</h2>
+                                            <button class="btn-time">Full time</button>
+                                        </div>
+                                    </div>                       
+                                    <div class="card-location-time">
+                                        <div class="location">
+                                            <i class="fas fa-globe-americas"><span> New York</span></i>
+                                            <i class="far fa-clock"><span> 5 days ago</span></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>  
+                    </div>
+                    
+                    <div class="btn-pages">
+                        <button class="btn-numb"><</button>
+                        <button class="btn-numb">1</button>
+                        <button class="btn-numb">2</button>
+                        <button class="btn-numb">3</button>
+                        <button class="btn-numb">4</button>
+                        <button class="btn-numb">...</button>
+                        <button class="btn-numb">10</button>
+                        <button class="btn-numb">></button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </main>
-    <footer>
-        <div class="footer">
-            <p>created by <span>Fernando</span> - devChallenges.io</p>
-        </div>
-    </footer>
+        </main>
+        <footer>
+            <div class="footer">
+                <p>created by <span>Fernando</span> - devChallenges.io</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
