--- a/Semana6-clase4/index.html
+++ b/Semana6-clase4/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./js/condicionales.js"></script>
+    <!-- <script src="./js/condicionales.js"></script> -->
+    <script src="./js/estructura-de-datos.js"></script>
 </body>
 </html>
